# JustODE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  RungeKutta.hpp  allmake.sh  main.cpp
Tests/: CMakeLists.txt
Tests/TestRK45/: CMakeLists.txt
Tests/TestRK45/src/: TestRungeKutta45.cpp
include/JustODE/: EmbeddedSolvers.hpp  JustODE.hpp  RungeKuttaBase.hpp  Utils.hpp
include/JustODE/Utils/: LUPFactorization.hpp  LevenbergMarquardt.hpp  Matrix.hpp  NumJacobian.hpp  Operations.hpp  TraitsHelper.hpp
include/RungeKutta/: RungeKutta.hpp  Utils.hpp
include_single/JustODE/: JustODE.hpp
scripts/: build_all  generate_single_header  update_version.py
scripts/amalgamate/: config.json
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/src/: LinearODE.cpp  NonlinearODE.cpp
tests/src/NonStiff/: LinearODE.cpp
